Compiler/gen/JetejParser.js
// Generated from java-escape by ANTLR 4.11.1
// jshint ignore: start
import antlr4 from 'antlr4';
import JetejParserListener from './JetejParserListener.js';
import JetejParserVisitor from './JetejParserVisitor.js';



const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.PredictionContextCache();

export default class JetejParser extends antlr4.Parser {

    static grammarFileName = "java-escape";
    static literalNames = [ null, "'name:'", "'width:'", "'height:'", "'<game>'", 
                            "'background:'", "'score:'", "'time:'", "'init:'", 
                            "'<object>'", null, "'life:'", "'pos x:'", "'pos y:'", 
                            "'speed x:'", "'speed y:'", "'update:'", "'number:'", 
                            "'mass:'", "'bounce:'", "'have collision:'", 
                            "'<event>'", "'object1:'", "'object2:'", "'actions:'", 
                            "'<function>'", "'param:'", "'body:'", null, 
                            null, "';'", "','", "'.'", "'('", "')'", "'['", 
                            "']'", "'if'", "'{'", "'}'", "'+'", "'-'", null, 
                            "'='", "'not'" ];
    static symbolicNames = [ null, "NAME", "WIDTH", "HEIGHT", "GAME_HEADER", 
                             "GAME_BACKGROUND", "GAME_SCORE", "GAME_TIME", 
                             "GAME_INIT", "OBJECT_HEADER", "OBJECT_IMAGE", 
                             "OBJECT_LIFE", "OBJECT_START_X", "OBJECT_START_Y", 
                             "OBJECT_SPEED_X", "OBJECT_SPEED_Y", "OBJECT_UPDATE", 
                             "OBJECT_NUMBER", "OBJECT_MASS", "OBJECT_BOUNCE", 
                             "OBJECT_COLLISION", "EVENT_HEADER", "EVENT_OBJECT1", 
                             "EVENT_OBHJECT2", "EVENT_ACTIONS", "FUNCTION_HEADER", 
                             "FUNCTION_PARAM", "FUNCTION_BODY", "INTEGER", 
                             "BOOL", "END_OF_LINE", "COMMA", "PERIOD", "LPAREN", 
                             "RPAREN", "SQ_LPAREN", "SQ_RPAREN", "IF", "BODY_START", 
                             "BODY_END", "ADD", "MINUS", "MULTIOP", "ASSIGN", 
                             "NOT", "BOOL_OP", "COMPARE_OP", "IDENTIFIER", 
                             "WS", "COMMENT", "LINE_COMMENT", "FILE_PATH" ];
    static ruleNames = [ "program", "name", "game", "object", "game_background", 
                         "width", "height", "game_score", "game_time", "init", 
                         "object_image", "object_life", "object_speed_x", 
                         "object_speed_y", "object_size_x", "object_size_y", 
                         "object_update", "object_mass", "object_bounce", 
                         "object_collision", "event", "event_object1", "event_object2", 
                         "event_actions", "function", "function_param", 
                         "function_body", "constant", "block", "line", "object_attribute", 
                         "statement", "ifBlock", "assignment", "expression", 
                         "funCall" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = JetejParser.ruleNames;
        this.literalNames = JetejParser.literalNames;
        this.symbolicNames = JetejParser.symbolicNames;
    }

    get atn() {
        return atn;
    }

    sempred(localctx, ruleIndex, predIndex) {
    	switch(ruleIndex) {
    	case 34:
    	    		return this.expression_sempred(localctx, predIndex);
        default:
            throw "No predicate with index:" + ruleIndex;
       }
    }

    expression_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 0:
    			return this.precpred(this._ctx, 5);
    		case 1:
    			return this.precpred(this._ctx, 4);
    		case 2:
    			return this.precpred(this._ctx, 2);
    		case 3:
    			return this.precpred(this._ctx, 1);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };




	program() {
	    let localctx = new ProgramContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, JetejParser.RULE_program);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 72;
	        this.game();
	        this.state = 78;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) == 0 && ((1 << _la) & 35652096) !== 0)) {
	            this.state = 76;
	            this._errHandler.sync(this);
	            switch(this._input.LA(1)) {
	            case 9:
	                this.state = 73;
	                this.object();
	                break;
	            case 21:
	                this.state = 74;
	                this.event();
	                break;
	            case 25:
	                this.state = 75;
	                this.function_();
	                break;
	            default:
	                throw new antlr4.error.NoViableAltException(this);
	            }
	            this.state = 80;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 81;
	        this.match(JetejParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	name() {
	    let localctx = new NameContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, JetejParser.RULE_name);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 83;
	        this.match(JetejParser.NAME);
	        this.state = 84;
	        this.match(JetejParser.IDENTIFIER);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	game() {
	    let localctx = new GameContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, JetejParser.RULE_game);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 86;
	        this.match(JetejParser.GAME_HEADER);
	        this.state = 95;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) == 0 && ((1 << _la) & 492) !== 0)) {
	            this.state = 93;
	            this._errHandler.sync(this);
	            switch(this._input.LA(1)) {
	            case 5:
	                this.state = 87;
	                this.game_background();
	                break;
	            case 2:
	                this.state = 88;
	                this.width();
	                break;
	            case 3:
	                this.state = 89;
	                this.height();
	                break;
	            case 6:
	                this.state = 90;
	                this.game_score();
	                break;
	            case 7:
	                this.state = 91;
	                this.game_time();
	                break;
	            case 8:
	                this.state = 92;
	                this.init();
	                break;
	            default:
	                throw new antlr4.error.NoViableAltException(this);
	            }
	            this.state = 97;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 98;
	        this.match(JetejParser.END_OF_LINE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	object() {
	    let localctx = new ObjectContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, JetejParser.RULE_object);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 100;
	        this.match(JetejParser.OBJECT_HEADER);
	        this.state = 101;
	        this.name();
	        this.state = 114;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) == 0 && ((1 << _la) & 1952780) !== 0)) {
	            this.state = 112;
	            this._errHandler.sync(this);
	            switch(this._input.LA(1)) {
	            case 10:
	                this.state = 102;
	                this.object_image();
	                break;
	            case 11:
	                this.state = 103;
	                this.object_life();
	                break;
	            case 14:
	                this.state = 104;
	                this.object_speed_x();
	                break;
	            case 15:
	                this.state = 105;
	                this.object_speed_y();
	                break;
	            case 2:
	                this.state = 106;
	                this.object_size_x();
	                break;
	            case 3:
	                this.state = 107;
	                this.object_size_y();
	                break;
	            case 16:
	                this.state = 108;
	                this.object_update();
	                break;
	            case 18:
	                this.state = 109;
	                this.object_mass();
	                break;
	            case 19:
	                this.state = 110;
	                this.object_bounce();
	                break;
	            case 20:
	                this.state = 111;
	                this.object_collision();
	                break;
	            default:
	                throw new antlr4.error.NoViableAltException(this);
	            }
	            this.state = 116;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 117;
	        this.match(JetejParser.END_OF_LINE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	game_background() {
	    let localctx = new Game_backgroundContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, JetejParser.RULE_game_background);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 119;
	        this.match(JetejParser.GAME_BACKGROUND);
	        this.state = 120;
	        this.match(JetejParser.IDENTIFIER);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	width() {
	    let localctx = new WidthContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, JetejParser.RULE_width);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 122;
	        this.match(JetejParser.WIDTH);
	        this.state = 123;
	        this.match(JetejParser.INTEGER);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	height() {
	    let localctx = new HeightContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, JetejParser.RULE_height);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 125;
	        this.match(JetejParser.HEIGHT);
	        this.state = 126;
	        this.match(JetejParser.INTEGER);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	game_score() {
	    let localctx = new Game_scoreContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, JetejParser.RULE_game_score);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 128;
	        this.match(JetejParser.GAME_SCORE);
	        this.state = 129;
	        this.match(JetejParser.INTEGER);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	game_time() {
	    let localctx = new Game_timeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, JetejParser.RULE_game_time);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 131;
	        this.match(JetejParser.GAME_TIME);
	        this.state = 132;
	        this.match(JetejParser.INTEGER);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	init() {
	    let localctx = new InitContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, JetejParser.RULE_init);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 134;
	        this.match(JetejParser.GAME_INIT);
	        this.state = 135;
	        this.funCall();
	        this.state = 140;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===31) {
	            this.state = 136;
	            this.match(JetejParser.COMMA);
	            this.state = 137;
	            this.funCall();
	            this.state = 142;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	object_image() {
	    let localctx = new Object_imageContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, JetejParser.RULE_object_image);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 143;
	        this.match(JetejParser.OBJECT_IMAGE);
	        this.state = 144;
	        this.match(JetejParser.FILE_PATH);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	object_life() {
	    let localctx = new Object_lifeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, JetejParser.RULE_object_life);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 146;
	        this.match(JetejParser.OBJECT_LIFE);
	        this.state = 147;
	        this.match(JetejParser.INTEGER);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	object_speed_x() {
	    let localctx = new Object_speed_xContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, JetejParser.RULE_object_speed_x);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 149;
	        this.match(JetejParser.OBJECT_SPEED_X);
	        this.state = 150;
	        this.expression(0);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	object_speed_y() {
	    let localctx = new Object_speed_yContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 26, JetejParser.RULE_object_speed_y);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 152;
	        this.match(JetejParser.OBJECT_SPEED_Y);
	        this.state = 153;
	        this.expression(0);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	object_size_x() {
	    let localctx = new Object_size_xContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 28, JetejParser.RULE_object_size_x);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 155;
	        this.match(JetejParser.WIDTH);
	        this.state = 156;
	        this.expression(0);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	object_size_y() {
	    let localctx = new Object_size_yContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 30, JetejParser.RULE_object_size_y);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 158;
	        this.match(JetejParser.HEIGHT);
	        this.state = 159;
	        this.expression(0);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	object_update() {
	    let localctx = new Object_updateContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 32, JetejParser.RULE_object_update);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 161;
	        this.match(JetejParser.OBJECT_UPDATE);
	        this.state = 162;
	        this.funCall();
	        this.state = 167;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===31) {
	            this.state = 163;
	            this.match(JetejParser.COMMA);
	            this.state = 164;
	            this.funCall();
	            this.state = 169;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	object_mass() {
	    let localctx = new Object_massContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 34, JetejParser.RULE_object_mass);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 170;
	        this.match(JetejParser.OBJECT_MASS);
	        this.state = 171;
	        this.expression(0);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	object_bounce() {
	    let localctx = new Object_bounceContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 36, JetejParser.RULE_object_bounce);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 173;
	        this.match(JetejParser.OBJECT_BOUNCE);
	        this.state = 174;
	        this.expression(0);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	object_collision() {
	    let localctx = new Object_collisionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 38, JetejParser.RULE_object_collision);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 176;
	        this.match(JetejParser.OBJECT_COLLISION);
	        this.state = 177;
	        this.match(JetejParser.BOOL);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	event() {
	    let localctx = new EventContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 40, JetejParser.RULE_event);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 179;
	        this.match(JetejParser.EVENT_HEADER);
	        this.state = 180;
	        this.event_object1();
	        this.state = 181;
	        this.event_object2();
	        this.state = 182;
	        this.event_actions();
	        this.state = 183;
	        this.match(JetejParser.END_OF_LINE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	event_object1() {
	    let localctx = new Event_object1Context(this, this._ctx, this.state);
	    this.enterRule(localctx, 42, JetejParser.RULE_event_object1);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 185;
	        this.match(JetejParser.EVENT_OBJECT1);
	        this.state = 186;
	        this.match(JetejParser.IDENTIFIER);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	event_object2() {
	    let localctx = new Event_object2Context(this, this._ctx, this.state);
	    this.enterRule(localctx, 44, JetejParser.RULE_event_object2);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 188;
	        this.match(JetejParser.EVENT_OBHJECT2);
	        this.state = 189;
	        this.match(JetejParser.IDENTIFIER);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	event_actions() {
	    let localctx = new Event_actionsContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 46, JetejParser.RULE_event_actions);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 191;
	        this.match(JetejParser.EVENT_ACTIONS);
	        this.state = 192;
	        this.funCall();
	        this.state = 197;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===31) {
	            this.state = 193;
	            this.match(JetejParser.COMMA);
	            this.state = 194;
	            this.funCall();
	            this.state = 199;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	function_() {
	    let localctx = new FunctionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 48, JetejParser.RULE_function);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 200;
	        this.match(JetejParser.FUNCTION_HEADER);
	        this.state = 201;
	        this.name();
	        this.state = 203;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===26) {
	            this.state = 202;
	            this.function_param();
	        }

	        this.state = 205;
	        this.function_body();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	function_param() {
	    let localctx = new Function_paramContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 50, JetejParser.RULE_function_param);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 207;
	        this.match(JetejParser.FUNCTION_PARAM);
	        this.state = 216;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===47) {
	            this.state = 208;
	            this.match(JetejParser.IDENTIFIER);
	            this.state = 213;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===31) {
	                this.state = 209;
	                this.match(JetejParser.COMMA);
	                this.state = 210;
	                this.match(JetejParser.IDENTIFIER);
	                this.state = 215;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	function_body() {
	    let localctx = new Function_bodyContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 52, JetejParser.RULE_function_body);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 218;
	        this.match(JetejParser.FUNCTION_BODY);
	        this.state = 219;
	        this.block();
	        this.state = 220;
	        this.match(JetejParser.END_OF_LINE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	constant() {
	    let localctx = new ConstantContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 54, JetejParser.RULE_constant);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 222;
	        _la = this._input.LA(1);
	        if(!(_la===28 || _la===29)) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	block() {
	    let localctx = new BlockContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 56, JetejParser.RULE_block);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 224;
	        this.match(JetejParser.BODY_START);
	        this.state = 228;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===37 || _la===47) {
	            this.state = 225;
	            this.line();
	            this.state = 230;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 231;
	        this.match(JetejParser.BODY_END);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	line() {
	    let localctx = new LineContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 58, JetejParser.RULE_line);
	    try {
	        this.state = 235;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 47:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 233;
	            this.statement();
	            break;
	        case 37:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 234;
	            this.ifBlock();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	object_attribute() {
	    let localctx = new Object_attributeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 60, JetejParser.RULE_object_attribute);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 237;
	        this.match(JetejParser.IDENTIFIER);
	        this.state = 238;
	        this.match(JetejParser.PERIOD);
	        this.state = 239;
	        this.match(JetejParser.IDENTIFIER);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	statement() {
	    let localctx = new StatementContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 62, JetejParser.RULE_statement);
	    try {
	        this.state = 243;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,14,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 241;
	            this.assignment();
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 242;
	            this.funCall();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


